# mrgf

./: README.md  pyproject.toml
.github/workflows/: push.yml
docker/: Dockerfile  README.md  default.yml
mrgf/: __init__.py  acapy.py  decorators.py  governance_framework.py  models.py  routes.py  selector.py
mrgfw/: __init__.py  decorators.py  gfw.py  models.py
tests/: test_decorators.py  test_governance_framework.py  test_models.py  test_selector.py
