[tool.poetry]
name = "mrgfw"
version = "0.1.0"
description = "Aries Cloud Agent - Python Machine Readable Governance Framework helpers"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
