[tool.poetry]
name = "mrgf"
version = "0.1.0"
description = "Aries Cloud Agent - Python Machine Readable Governance Framework helpers"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = ">=0.7.1"
pydantic = "^1.8.2"
typing-extensions = "^3.10.0"
sgl = "^0.9.17"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
